styles/styles.css
@import url('https://fonts.googleapis.com/css2?family=Advent+Pro:wght@400;700&display=swap');

:root {
    --bg-color: #262A2E;
    --white: #FEFEFE;
    --pink:#EAD0FF;
    --green: #D0FFE9;
    --main-font: "Advent Pro";
    --font-p-size: 1rem;
}
html {
    font-family: var(--main-font);
    color: var(--white);
}
* {
    margin: 0;
    box-sizing: border-box;
}
body {
    background-color: var(--bg-color);
}
.arrow {
    width: 15px;
    position: absolute;
    top: 20px;
    left: 400px;
    -webkit-transform: scaleX(-1);
    transform: scaleX(-1);
    cursor: pointer;
}
a {
    font-size: var(--font-p-size);
}
h1, h2, h3, p, ul li, a{
    font-family: var(--main-font);
    color: var(--white);
    line-height: 168%;
    letter-spacing: 2px 
}
ul li {
    font-size: var(--font-p-size);
}
p {
    font-size: var(--font-p-size);
}
.left {
    border-right: 1px solid var(--white);
    padding-right: 70px;
    padding-left: 70px;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
}
.left a {
    padding: 10px 0px;
}
h1 {
    font-size: 2rem;
}

.right {

    padding-left: 50px;
 

    overflow-y: scroll;
}
.right h1 {
    padding-top: 50px;
}
.projects-container {
    display: flex;
    flex-direction: column;
    gap: 60px;
    margin-bottom: 100px;
    
}
.project {
    display: flex;
    flex-direction: row;
    gap: 20px;
   flex-wrap: wrap;
}
.project div {
    width: 500px;
}
.project img {
    max-width: 300px;
    max-height: 185px;

    border-radius: 5px;
}
.project a {
    font-size: 20px;
}
.tech {
    color: #0fcc74;;
    font-size: 12px;
    padding: 10px 0px;
}
.left img {
    display: block;
    margin: auto;
    padding-top: 30px;

}
.accent-pink {
    background-color: var(--pink);
    color: var(--bg-color);
    padding: 4px;
  
}
.accent-green {
    background-color: var(--green);
    color: var(--bg-color);
    padding: 4px;
}
main {
    display: grid;
    grid-template-columns: 440px 1fr;
    height: 100vh;

}

.social svg {
    margin-top: 10px;
    cursor: pointer;
 
}


@media screen and (max-width:1000px) {
    main {
        grid-template-rows: max(100vh, 700px) 1fr ;
        grid-template-columns: 1fr;
        padding: 20px 20px;
        height: auto;

    }
    .left {
        padding: 0px;
        border: none;
        display: flex;
        flex-direction: column;
        justify-content: space-evenly;
    
    }
    .left img {
        /* height: -webkit-fill-available; */
  
        object-fit: contain;
   
    }
    .project {
        flex-direction: column;
    }
    .right {
        padding: 0px;
        height: fit-content;
        overflow: hidden;
    }
    .arrow {
        display: none;
    }

    .project img {
        width: 100%;
        height: 100%;
    }
}

